--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,14 @@ body {
   color: #fff;
 }
 
+input,
+textarea,
+button {
+  border: none;
+  outline: none;
+  background: transparent;
+}
+
 .loader {
   width: 48px;
   height: 48px;
