--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,18 @@ button {
   background: transparent;
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+input[type="checkbox"] {
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+
 .loader {
   width: 48px;
   height: 48px;
